# itchcraft

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  README.md  USAGE.md  pyproject.toml
.github/workflows/: ci.yml  pr-post-merge.yml  prepare-release.yml
.redport/: manifest.rpt.json
.redport/cookiecutter_replay/: cookiecutter-python-package.json
contrib/udev/: 60-itchcraft.rules
debian/: changelog  control  copyright  itchcraft.manpages  itchcraft.udev  rules
debian/patches/: replace-myst-parser.patch  replace-poetry.patch
doc/: requirements.txt
doc/sphinx/: conf.py  index.rst
itchcraft/: __init__.py  __main__.py  api.py  backend.py  cli.py  device.py  devices.py  errors.py  format.py  heat_it.py  prefs.py  settings.py  start.py  support.py  types.py
itchcraft/stubs/usb/: backend.pyi  core.pyi  util.pyi
itchcraft/types/: __init__.py  usb.py
tests/: test_heat_it.py
